Fixed spacing with additional notes bar (I hope)

--- a/src/ViewEditCreateTaskPage/TaskDisplay.css
+++ b/src/ViewEditCreateTaskPage/TaskDisplay.css
@@ -12,6 +12,7 @@
   grid-template-columns: 60px 2fr 1fr;
   margin: 0 auto;
   width: 91%;
+  margin-bottom: 65px; 
 }
 
 .task-display-picker-open {
@@ -64,7 +65,15 @@
 
 .set-note {
   grid-column: 2 / span 2;
-  grid-row: 4 / span 1;
+  grid-row: 3 / span 1;
+  font-size: 12pt;
+  min-height: 70px;
+  vertical-align: middle;
+  display: flex;
+  align-items: center; 
+}
+
+.set-note-text {
   font-size: 12pt;
 }
 
